# TrenchRun

./: .gitignore  CHANGELOG  README.md  config.py  pyproject.toml  render.py  screens.py  settings.ini  tmp.py  trench.py  utils.py
src/: README  source.py
trenchrun/: __init__.py  config.py  objects.py  player.py  render.py  screens.py  torpedos.py  trench.py  utils.py
