[project]
name = "TrenchRun"
version = "1.6"
authors = [
    {name = "RPINerd", email = "RPINerd@gmail.com"}
]
description = "A remake of the trench sequence of the 1983 Star Wars arcade cabinet."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.4",
    "pygame-ce>=2.5.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "flit_core>=3.11,<4",
    "pytest>=7.4.0",
]

[project.urls]
homepage = "https://github.com/RPINerd/TrenchRun"
issues = "https://github.com/RPINerd/TrenchRun/issues"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "trenchrun"
author = "RPINerd"
